--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^2.1.3",
+    "serve": "^14.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -48,7 +49,6 @@
   "devDependencies": {
     "@fullpage/react-fullpage": "^0.1.40",
     "@types/webpack-env": "^1.18.1",
-    "webpack": "^4.19.1",
-    "serve": "^14.2.1"
+    "webpack": "^4.19.1"
   }
 }
