--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-hash-link": "^2.4.3",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "serve": "^14.2.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "serve -s build -p 443",
+    "start": "serve -s build",
     "start-dev": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts  build",
     "build-dev": "react-scripts --openssl-legacy-provider build",
